--- a/rep01.html
+++ b/rep01.html
@@ -31,11 +31,12 @@
       <img src="art.png" alt="ラインアートの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        スクラッチを使ってプログラミングを行った。猫を動かしその動いた場所に線を描くことでサイエンスアートとして絵を作成した。<br>
+        角度や歩く歩数、座標などを細かく設定してプログラミングを行った。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        私はサイエンスアートで実際に猫を動かし絵をかくのは初めての体験だったのであまりうまくいかなかった。しかし、角度を調整したり、歩く歩数、座標を変更するなどの試行錯誤を
+        重ねることが完成への第１歩になると感じた。<br>
+        <br>
       </div>
     </div>
 
@@ -44,11 +45,11 @@
       <img src="game.png" alt="りんごチャッチゲームの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        スクラッチを使用してリンゴキャッチゲームを作成した。スクラッチの猫の動きを左右だけに絞ったり音楽を追加、スコアを出すなどしてよりゲームっぽく作ることができた。<br>
+        また猫のプログラムだけでなく、リンゴにもプログラムを作成した。リンゴが降ってくるｘ座標を乱数にすることでより難しいゲームにすることができた。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        スクラッチでゲームが作れたことに驚いた。簡単に作れそうなゲームでも<br>
+        <br>
       </div>
     </div>
 
