--- a/rep01.html
+++ b/rep01.html
@@ -48,7 +48,7 @@
         スクラッチを使用してリンゴキャッチゲームを作成した。スクラッチの猫の動きを左右だけに絞ったり音楽を追加、スコアを出すなどしてよりゲームっぽく作ることができた。<br>
         また猫のプログラムだけでなく、リンゴにもプログラムを作成した。リンゴが降ってくるｘ座標を乱数にすることでより難しいゲームにすることができた。<br>
         2.感想<br>
-        スクラッチでゲームが作れたことに驚いた。簡単に作れそうなゲームでも<br>
+        スクラッチでゲームが作れたことに驚いた。簡単に作れそうなゲームでもリンゴが降ってくる座標を乱数でランダムにするなど細かい工夫が大切だと感じた。<br>
         <br>
       </div>
     </div>
