--- a/rep01.html
+++ b/rep01.html
@@ -49,7 +49,8 @@
         また猫のプログラムだけでなく、リンゴにもプログラムを作成した。リンゴが降ってくるｘ座標を乱数にすることでより難しいゲームにすることができた。<br>
         2.感想<br>
         スクラッチでゲームが作れたことに驚いた。簡単に作れそうなゲームでもリンゴが降ってくる座標を乱数でランダムにするなど細かい工夫が大切だと感じた。<br>
-        また <br>
+        また、これ以外の工夫を追加することでより楽しいゲームが作れると感じたのでより詳しく扱えるようになりたいと感じました。
+    <br>
       </div>
     </div>
 
