--- a/rep01.html
+++ b/rep01.html
@@ -60,13 +60,13 @@
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://kouga1107.github.io/web/">私のホームページ</a><br>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        <br>
+        <br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        二週目にホームページを作ることができた。こんなに簡単にホームページを作れて、インターネットに発信ができるんだと初めて知ったのでびっくりした。<br>
+        将来エンジニアになったときに、役立つ技術だと思うので覚えておきたいです。<br>
       </div>
-    </div>
+    </div>い
 
     <div>
       <h3>各ページへのリンク</h3>
