--- a/rep01.html
+++ b/rep01.html
@@ -60,8 +60,8 @@
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://kouga1107.github.io/web/">私のホームページ</a><br>
         1.内容<br>
-        <br>
-        <br>
+        htmlを使用して、ホームページを作成して、レポートを書いた。<br>
+        改行や、入力などの意味を持った文字列があり、それらを活用して、文章を作成した<br>
         2.感想<br>
         二週目にホームページを作ることができた。こんなに簡単にホームページを作れて、インターネットに発信ができるんだと初めて知ったのでびっくりした。<br>
         将来エンジニアになったときに、役立つ技術だと思うので覚えておきたいです。<br>
