--- a/rep02.html
+++ b/rep02.html
@@ -30,11 +30,11 @@
       <h3>2-1 2週目のレポートをHTMLで作る</h3>
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        今回の実習では、主にAIについての内容だった。<br>
+        画像を認識するAIを作る作業の際、要素を画像にしてカメラで判別したものを割合で出力した。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+       　画像の要素を遠くにしたり角度を変えたりして、より鮮明に覚えさせた。こういった工夫をすることでより鮮明な判断ができるようになった。<br>
+        しかし、チョキは判別が難しく、さらに工夫が必要だと思った。<br>
         3. 2週目が完成した人は1週目のレポートも完成させる<br>
       </div>
     </div>
@@ -44,8 +44,8 @@
       <img src="ml.png" alt="TeachableMachineの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        スクラッチにカメラを拡張機能で追加して判別した手に対応した動きをできるようにした。<br>
+        ぐーだったときなどでそれぞれの動きを定めて<br>
         2.感想<br>
         学習した内容を実践したときに自分が感じた感想を<br>
         自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
@@ -57,11 +57,11 @@
       <img src="wroom.png" alt="metaWRの画像" width="50%" height="50%"> <img src="roblox.png" alt="ロブロックスの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        ロブロックスというゲームを利用して、ｖｒ空間を楽しんだ。高専にいどうして仮想空間で高専をたのしめた。普段いけないところでもいけるようになった。<br>
+        すごくリアルな高専を再現されていた。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+      ロブロックスをＶＲで体験した。没入感がすごかった。友達と楽しく遊べて、仮想の世界を歩く感覚がとても新鮮でとても楽しかった。<br>
+      またやりたいと感じた。  <br>
       </div>
     </div>
 
