--- a/rep02.html
+++ b/rep02.html
@@ -45,10 +45,10 @@
       <div>
         1.内容<br>
         スクラッチにカメラを拡張機能で追加して判別した手に対応した動きをできるようにした。<br>
-        ぐーだったときなどでそれぞれの動きを定めて<br>
+        ぐーだったときなどでそれぞれの動きを定めた。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+       スクラッチにカメラ機能を追加して新しいプログラミングを作った。様々な機能を追加していくとより楽しくプログラミングをできた。<br>
+       カメラとスクラッチの猫を連携させて遊ぶことが楽しかった。<br>
       </div>
     </div>
 
