--- a/rep03.html
+++ b/rep03.html
@@ -21,7 +21,7 @@
 <body>
   <div class=header>
     <h1>３週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>○○班○○番 ニックネーム</div>
+    <div>1a班16番 久保</div>
   </div>
   <div class=3week>
     <h2>第3週目</h2>
@@ -31,11 +31,11 @@
       <a href="https://yourID.github.io/web/vr.html">自作した３次元空間</a><br>
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        ３Ｄの空間の作り方を学んだ。奥行や、上下、左右に移動させたりして好みの空間を作れた。<br>
+        また色を設定するのに英語や数字を利用して表すことを学んだ。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        色や形、向きや場所を細かく設定しないと成功しないので難しかった。<br>
+        地面のようなものも設定しないといけないことに驚いた。これが慣れればいろいろなことができるようになると感じた。<br>
       </div>
     </div>
     <div>
