--- a/rep03.html
+++ b/rep03.html
@@ -44,11 +44,11 @@
       <a href="https://yourID.github.io/web/dengon.html">伝言板</a><br>
       <div>
         1.内容<br>
-        伝言板を作成した。<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        自分のホームページで誰でも伝言を残せるスペースを作成した。<br>
+        スペースの幅や英語の大文字小文字などに気を付けて作成した。伝言を残した場合、残さなかった場合の設定も作成した。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        スペースの隙間や、大文字小文字、スペルや半角などちょっとした失敗でも動かなかったりするのでとても慎重に作成した。<br>
+        世界の人と伝言でつながれるのがすごい。<br>
       </div>
     </div>
 
