--- a/rep03.html
+++ b/rep03.html
@@ -28,7 +28,7 @@
     <div>
       <h3>3-1 JavaScript体験：VR空間を作る</h3>
       <img src="vr.png" alt="立体空間の画像" width="50%" height="50%"><br>
-      <a href="https://yourID.github.io/web/vr.html">自作した３次元空間</a><br>
+      <a href="https://kouga1107.github.io/web/vr.html">自作した３次元空間</a><br>
       <div>
         1.内容<br>
         ３Ｄの空間の作り方を学んだ。奥行や、上下、左右に移動させたりして好みの空間を作れた。<br>
@@ -41,7 +41,7 @@
     <div>
       <h3>3-2 JavaScript体験：伝言プログラムを作る</h3>
       <img src="dengon.png" alt="伝言板の画像" width="50%" height="50%"><br>
-      <a href="https://yourID.github.io/web/dengon.html">伝言板</a><br>
+      <a href="https://kouga1107.github.io/web/dengon.html">伝言板</a><br>
       <div>
         1.内容<br>
         自分のホームページで誰でも伝言を残せるスペースを作成した。<br>
