--- a/rep01.html
+++ b/rep01.html
@@ -66,7 +66,7 @@
         二週目にホームページを作ることができた。こんなに簡単にホームページを作れて、インターネットに発信ができるんだと初めて知ったのでびっくりした。<br>
         将来エンジニアになったときに、役立つ技術だと思うので覚えておきたいです。<br>
       </div>
-    </div>い
+    </div>
 
     <div>
       <h3>各ページへのリンク</h3>
